--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         JavaScript that is lightweight and free of external dependencies but sometimes
                         I like to play with Leaflet and D3.js and have experience with most of
                         the big libraries and frameworks. I thoroughly enjoy working with teams
-                        of other intelligent developers, peer-programming, and learning techniques,
+                        of other intelligent developers, peer-programming, and learning new techniques,
                         languages, and libraries.</p>
                 </div>
             </section>
