--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					</h1>
 
                         	<h2>
-						Programmer
+						JavaScript Developer
 					</h2>
 
                     </div>
