--- a/index.html
+++ b/index.html
@@ -294,8 +294,7 @@
                             <div class="website pull-right">	<a href="http://www.homeadvisor.com">http://www.homeadvisor.com</a>
 
                             </div>
-                            <div class="position">Senior JavaScript Developer, Senior UI Developer, Front-end Automation
-                                Lead</div>
+                            <div class="position">Senior JavaScript Developer, Senior UI Developer</div>
                             <div class="summary">
                                 <p>HomeAdvisor provides a matching service which is designed to pair homeowners
                                     with qualified and pre-screened contractors.</p>
