--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
                     <p>I am a fullstack web developer located in Thornton, Colorado. I love architecting
                         and building scalable, configuration-driven, web applicataions and frameworks
                         with RESTful API&#x27;s and JavaScript. When writing my own API&#x27;s
-                        and backend services, I prefer Node.js but also have experience in PHP,
-                        Java (Spring), and some .NET. I pride myself in writing &#x27;vanilla&#x27;
-                        JavaScript that is lightweight and free of external dependencies but sometimes
-                        I like to play with Leaflet and D3.js and have experience with most of
-                        the big libraries and frameworks. I thoroughly enjoy working with teams
-                        of other intelligent developers, peer-programming, and learning new techniques,
+                        and backend services, I prefer Node.js but also have some experience in
+                        PHP and Java (Spring). I pride myself in writing &#x27;vanilla&#x27; JavaScript
+                        that is lightweight and free of external dependencies but sometimes I like
+                        to play with Leaflet, D3.js, and Svelte and have some experience with many
+                        of the big libraries and frameworks. I thoroughly enjoy working with teams
+                        of talented developers, peer-programming, and learning new techniques,
                         languages, and libraries.</p>
                 </div>
             </section>
@@ -302,27 +302,29 @@
                             	<h4>Highlights</h4>
 
                             <ul class="highlights">
-                                <li class="bullet">Tested and implemented performance improvements to all pages down the
-                                    website&#x27;s purchase path that systematically improved conversion rates
-                                    and overall revenue</li>
+                                <li class="bullet">Architected, built, monitored, and maintained the <a href="https://match.angieslist.com">https://match.angieslist.com</a> web
+                                    property for the merger with AngiesList.com (Node.js [Express], Docker,
+                                    Rancher, Jenkins, Gitlab CI, Coherence, HAProxy).</li>
+                                <li class="bullet">Tested and implemented performance improvements to all pages down HomeAdvisor.com&#x27;s
+                                    purchase path that systematically improved conversion rates and overall
+                                    revenue</li>
                                 <li class="bullet">Re-designed core products to utilize responsive, mobile-first, design
                                     patterns. After testing and verifying improved conversion, this framework
                                     was applied to all key components of the website and large amounts of legacy,
                                     mobile-optimized, code were removed.</li>
                                 <li class="bullet">Implemented automated Selenium testing with Nightwatch.js, Docker, Selenium-Grid,
-                                    and Jenkins and led efforts across UI and automation departments to standardize
-                                    best practices regarding writing and running Nightwatch.js tests.</li>
-                                <li
-                                class="bullet">Lead UI developer for core product initiatives such as Instant Booking,
-                                    Booking with Google, Booking with Facebook, and Instant Connect from pilot
-                                    to nationwide rollout.</li>
-                                    <li class="bullet">Implemented new load testing framework with Node.js and D3.js for data
-                                        visualization/monitoring.</li>
-                                    <li class="bullet">Created fun realtime map for HomeAdvisor.com website activity using Node.js,
-                                        Express, D3.js, Kafka, and WebSockets. See it in action and read more here:
-                                        <a
-                                        href="https://homeadvisor.tech/real-time-data-visualization-mongodb-kafka-d3-node/">https://homeadvisor.tech/real-time-data-visualization-mongodb-kafka-d3-node/</a>
-                                    </li>
+                                    and Jenkins and led efforts across UI department to standardize best practices
+                                    regarding writing and running Nightwatch.js tests.</li>
+                                <li class="bullet">Lead UI developer for core product initiatives such as the service request
+                                    path, Instant Booking, Booking with Google, Booking with Facebook, Consumer
+                                    Choice, and Instant Connect from pilot to nationwide rollout.</li>
+                                <li class="bullet">Implemented new load testing framework with Node.js and D3.js for data
+                                    visualization/monitoring.</li>
+                                <li class="bullet">Created fun realtime map for HomeAdvisor.com website activity using Node.js,
+                                    Express, D3.js, Kafka, and WebSockets. See it in action and read more here:
+                                    <a
+                                    href="https://homeadvisor.tech/real-time-data-visualization-mongodb-kafka-d3-node/">https://homeadvisor.tech/real-time-data-visualization-mongodb-kafka-d3-node/</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="col-sm-12">
@@ -453,9 +455,11 @@
                                 <li>D3.js</li>
                                 <li>Angular</li>
                                 <li>Backbone</li>
+                                <li>Svelte/Sapper</li>
                                 <li>Java</li>
                                 <li>HTML</li>
-                                <li>Jade</li>
+                                <li>Jade/Pug</li>
+                                <li>Rollup</li>
                                 <li>JSP</li>
                                 <li>CSS</li>
                                 <li>Less</li>
