fix: generate resume

--- a/index.html
+++ b/index.html
@@ -285,9 +285,44 @@
                     <div class="row">
                         <div class="col-sm-12">
                             	<h4 class="strike-through">
+					<span>T-Mobile Home &amp; Entertainment (T-Vision)</span>
+					<span class="date">
+						2019-02-27 — Present
+					</span>
+				</h4>
+
+                            <div class="website pull-right">	<a href="http://www.t-mobile.com">http://www.t-mobile.com</a>
+
+                            </div>
+                            <div class="position">Senior Software Engineer</div>
+                            <div class="summary">
+                                <p>T-Mobile&#x27;s T-Vision team focuses on a fully featured OTT video streaming
+                                    service.</p>
+                            </div>
+                            	<h4>Highlights</h4>
+
+                            <ul class="highlights">
+                                <li class="bullet">Implemented new product features &amp; maintained existing products with
+                                    focus on code maintainability and testability</li>
+                                <li class="bullet">Migrated microservice architecture from AMI and EC2 to Docker and Kubernetes</li>
+                                <li
+                                class="bullet">Transitioned back-end team to trunk-based-development</li>
+                                    <li class="bullet">Implemented CI/CD pipelines in Gitlab with automated testing (unit, integration,
+                                        and load), static analysis, security scanning, and deployment</li>
+                                    <li class="bullet">Implemented load testing platform in K8S and Locust capable of sending
+                                        ~20k+ requests/second on-demand</li>
+                                    <li class="bullet">Authored &#x27;next-generation&#x27; microservice interface with improved
+                                        developer experience and advanced caching and reliability features</li>
+                                    <li
+                                    class="bullet">Led initiative to build fully-featured content management system (front-end
+                                        and back-end) in svelte, express, and mongodb</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-12">
+                            	<h4 class="strike-through">
 					<span>HomeAdvisor</span>
 					<span class="date">
-						2013-03-01 — Present
+						2013-03-01 — 2019-02-25
 					</span>
 				</h4>
 
