chore: update resume

--- a/index.html
+++ b/index.html
@@ -234,16 +234,11 @@
 
                 </aside>
                 <div class="col-sm-9">
-                    <p>I am a fullstack web developer located in Thornton, Colorado. I love architecting
-                        and building scalable, configuration-driven, web applicataions and frameworks
-                        with RESTful API&#x27;s and JavaScript. When writing my own API&#x27;s
-                        and backend services, I prefer Node.js but also have some experience in
-                        PHP and Java (Spring). I pride myself in writing &#x27;vanilla&#x27; JavaScript
-                        that is lightweight and free of external dependencies but sometimes I like
-                        to play with Leaflet, D3.js, and Svelte and have some experience with many
-                        of the big libraries and frameworks. I thoroughly enjoy working with teams
-                        of talented developers, peer-programming, and learning new techniques,
-                        languages, and libraries.</p>
+                    <p>I am a fullstack web developer located in Westminster, Colorado. I love
+                        architecting and building scalable, configuration-driven, web applicataions
+                        with RESTful API&#x27;s, JavaScript, Docker, and Kubernetes. When writing
+                        my own API&#x27;s and backend services, I prefer Node.js. I thoroughly
+                        enjoy working with, learning from, and mentoring fellow engineers.</p>
                 </div>
             </section>
             <section id="profiles" class="row">
@@ -283,6 +278,40 @@
                 </aside>
                 <div class="col-sm-9">
                     <div class="row">
+                        <div class="col-sm-12">
+                            	<h4 class="strike-through">
+					<span>VIZIO Inc</span>
+					<span class="date">
+						2021-07-01 — 2023-10-13
+					</span>
+				</h4>
+
+                            <div class="website pull-right">	<a href="https://ui.sctv.prod.smartcasttv.com/demo/resized">https://ui.sctv.prod.smartcasttv.com/demo/resized</a>
+
+                            </div>
+                            <div class="position">Principal Software Engineer</div>
+                            <div class="summary">
+                                <p>Individual contributor, architect, mentor, and lead for client-facing
+                                    applications running on VIZIO televisions</p>
+                            </div>
+                            	<h4>Highlights</h4>
+
+                            <ul class="highlights">
+                                <li class="bullet">Led, mentored, taught, and architected-for three wonderful teams of talented
+                                    client and automation engineers</li>
+                                <li class="bullet">Built, maintained, and improved software used by ~18m active users</li>
+                                <li
+                                class="bullet">Architected and led migration/rewrite of legacy codebases to improve performance
+                                    and user experience</li>
+                                    <li class="bullet">Implemented a re-usable backend-for-frontend (BFF) framework using Node.js,
+                                        Kubernetes, and Gloo API Gateway</li>
+                                    <li class="bullet">Led effort to implement CI/CD for all client applications in Github Actions</li>
+                                    <li
+                                    class="bullet">Developed a realtime monitoring/alerting solution using Kinesis, SNS/SQS,
+                                        InfluxDB, and Grafana</li>
+                                        <li class="bullet">Introduced Cypress and Playwright testing frameworks</li>
+                            </ul>
+                        </div>
                         <div class="col-sm-12">
                             	<h4 class="strike-through">
 					<span>T-Mobile Home &amp; Entertainment (T-Vision)</span>
