chore: update resume

--- a/index.html
+++ b/index.html
@@ -516,18 +516,14 @@
                             <ul class="keywords">
                                 <li>Javascript</li>
                                 <li>Node.js</li>
+                                <li>Docker</li>
+                                <li>Kubernetes</li>
+                                <li>Svelte/SvelteKit</li>
+                                <li>CI/CD (github, gitlab, circle)</li>
                                 <li>D3.js</li>
-                                <li>Angular</li>
-                                <li>Backbone</li>
-                                <li>Svelte/Sapper</li>
-                                <li>Java</li>
                                 <li>HTML</li>
-                                <li>Jade/Pug</li>
-                                <li>Rollup</li>
-                                <li>JSP</li>
                                 <li>CSS</li>
-                                <li>Less</li>
-                                <li>Sass</li>
+                                <li>Jade/Pug</li>
                             </ul>
                         </div>
                     </div>
